some error bug-fix

--- a/source/view/linkDevices.html
+++ b/source/view/linkDevices.html
@@ -1,5 +1,5 @@
 <div class="container-fluid tab-panel">
-  <div v-if="hueBridges.length > 0" class="row">
+  <div v-if="hueBridges && (hueBridges.length > 0)" class="row">
     <div class="col-sm-3 col-md-3">
       <br>
       <h4>Hue</h4>
