Ver 0.4.7 HAP-NodeJS VerUp QRコード対応

--- a/source/css/localStyle.css
+++ b/source/css/localStyle.css
@@ -255,6 +255,12 @@ table.ui-table tr th, table.ui-table tr td {
   height: 25px;
 }
 
+.hap-qr {
+  display: inline-block;
+  vertical-align: middle;
+  
+}
+
 #node-red {
   position: fixed;
   top: 80px;
